SecurityCONFIG FIX